--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <script>
     // Navigate to next page URL when card is clicked or keyboard activated
     function navigateNext() {
-      window.location.href = "file:///C:/Users/asus/Desktop/testnew/kata motivasi/kad berputar/second.html"; // Replace with your target URL
+      window.location.href = "second.html"; // Replace with your target URL
     }
   </script>
 </body>
